<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:text="@string/quote"
            android:textColor="@color/color_FF000000" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:text="@string/author_name"
            android:textColor="@color/colorAccent2" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"

            android:layout_marginRight="@dimen/dp_20"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            app:cardCornerRadius="@dimen/dp_5"
            app:cardElevation="@dimen/dp_8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_200"
                        android:src="@drawable/img_logo_white" />

                    <Button

                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_25"
                        android:layout_gravity="bottom|left"
                        android:layout_marginBottom="@dimen/dp_20"
                        android:background="@color/color_FF000000"
                        android:gravity="center"
                        android:paddingLeft="@dimen/dp_5"
                        android:paddingRight="@dimen/dp_5"
                        android:text="Quote"
                        android:textAllCaps="false"
                        android:textColor="@color/color_FFFFFFFF" />
                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/color_FF000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:gravity="left"
                    android:text="@string/card_string"
                    android:textColor="@color/color_FF000000" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcylrHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginRight="@dimen/dp_20"
            android:paddingBottom="@dimen/sp_20"
            tools:listitem="@layout/row_home_adapter" />
    </LinearLayout>
</ScrollView>
